[package]
name = "weather_haiku"
version = "0.1.0"
edition = "2021"

[lib]
name = "weather_haiku"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
ureq = { version = "2.6.2", features = ["json", "charset"] }
