[package]
name = "weather_haiku_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
weather_haiku = { path = "../../" }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
ureq = { version = "2.6.2", features = ["json", "charset"] }
