[package]
name = "weather_haiku_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.24"
dotenv = "0.15.0"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.7"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_dynamodb = "0.9.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
ureq = { version = "2.6.2", features = ["json", "charset"] }
weather_haiku = { path = "../../" }